...
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/belanosima"
                android:background="@drawable/mybutton"
                android:textColor="@color/bonus_yellow"/>

            <Button
                android:id="@+id/delete_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/belanosima"
                android:text="Delete"
                android:textColor="@color/bonus_yellow"/>
...
